# libadwaitamm

./: .gitignore  AUTHORS  README.md  libadwaitamm.doap  meson.build  meson_options.txt
.github/scripts/: run-tests.sh
.github/workflows/: meson-fedora.yml
demo/: adw-demo-debug-info.cc  adw-demo-preferences-window.cc  adw-demo-preferences-window.h  adw-demo-preferences-window.ui  adw-demo-window.cc  adw-demo-window.h  adw-demo-window.ui  adwaitamm-demo.cc  adwaitamm-demo.gresources.xml  meson.build  namedclass.h  org.gnome.Adwaitamm1.Demo.json  templatebuilder.h  templatewidget.h
demo/data/: meson.build  org.gnome.Adwaitamm1.Demo.desktop.in  org.gnome.Adwaitamm1.Demo.metainfo.xml.in.in
demo/pages/about/: adw-demo-page-about.cc  adw-demo-page-about.h  adw-demo-page-about.ui
demo/pages/animations/: adw-demo-page-animations.cc  adw-demo-page-animations.h
demo/pages/avatar/: adw-demo-page-avatar.cc  adw-demo-page-avatar.h
demo/pages/buttons/: adw-demo-page-buttons.cc  adw-demo-page-buttons.h
demo/pages/carousel/: adw-demo-page-carousel.cc  adw-demo-page-carousel.h
demo/pages/clamp/: adw-demo-page-clamp.cc  adw-demo-page-clamp.h
demo/pages/dialogs/: adw-demo-page-dialogs.cc  adw-demo-page-dialogs.h
demo/pages/flap/: adw-demo-page-flap.cc  adw-demo-page-flap.h  adw-flap-demo-window.cc  adw-flap-demo-window.h  adw-flap-demo-window.ui
demo/pages/leaflet/: adw-demo-page-leaflet.cc  adw-demo-page-leaflet.h
demo/pages/lists/: adw-demo-page-lists.cc  adw-demo-page-lists.h
demo/pages/styles/: adw-demo-page-styles.cc  adw-demo-page-styles.h  adw-style-demo-window.cc  adw-style-demo-window.h  adw-style-demo-window.ui
demo/pages/tab-view/: adw-demo-page-tab-view.cc  adw-demo-page-tab-view.h  adw-tab-view-demo-window.cc  adw-tab-view-demo-window.h
demo/pages/toasts/: adw-demo-page-toasts.cc  adw-demo-page-toasts.h
demo/pages/view-switcher/: adw-demo-page-view-switcher.cc  adw-demo-page-view-switcher.h  adw-view-switcher-demo-window.cc  adw-view-switcher-demo-window.h
demo/pages/welcome/: adw-demo-page-welcome.cc  adw-demo-page-welcome.h  adw-demo-page-welcome.ui
doc/reference/: Doxyfile.in  meson.build
examples/: meson.build
examples/example1/: main.cc
examples/hello-world/: hello.cc
libadwaita/: libadwaitamm-uninstalled.pc.in  libadwaitamm.h  libadwaitamm.pc.in  libadwaitammconfig.h.in  meson.build
libadwaita/libadwaitamm/: init.cc  init.h  meson.build  selectionlistmodelimpl.cc  selectionlistmodelimpl.h  wrap_init.h
libadwaita/src/: aboutwindow.hg  actionrow.hg  animation.ccg  animation.hg  animationtarget.ccg  animationtarget.hg  application.ccg  application.hg  applicationwindow.hg  avatar.hg  bin.hg  buttoncontent.hg  callbackanimationtarget.ccg  callbackanimationtarget.hg  carousel.hg  carouselindicatordots.hg  carouselindicatorlines.hg  clamp.hg  clamplayout.hg  clampscrollable.hg  comborow.hg  easing.ccg  easing.hg  entryrow.ccg  entryrow.hg  enumlistitem.hg  enumlistmodel.hg  expanderrow.hg  flap.hg  foldthresholdpolicy.hg  headerbar.hg  leaflet.ccg  leaflet.hg  leafletpage.hg  libadwaita.ccg  libadwaita.defs  libadwaita.hg  libadwaita_docs.xml  libadwaita_enums.defs  libadwaita_methods.defs  (+41 more)
subprojects/: libadwaita-1.0.wrap
tests/: meson.build  test-about-window.cc  test-action-row.cc  test-animation-target.cc  test-animation.cc  test-application-window.cc  test-avatar.cc  test-bin.cc  test-button-content.cc  test-carousel-indicator-dots.cc  test-carousel-indicator-lines.cc  test-carousel.cc  test-combo-row.cc  test-easing.cc  test-entry-row.cc  test-expander-row.cc  test-flap.cc  test-header-bar.cc  test-leaflet.cc  test-message-dialog.cc  test-password-entry-row.cc  test-preferences-group.cc  test-preferences-page.cc  test-preferences-row.cc  test-preferences-window.cc  test-split-button.cc  test-squeezer.cc  test-status-page.cc  test-style-manager.cc  test-tab-bar.cc  test-tab-view.cc  test-timed-animation.cc  test-toast-overlay.cc  test-toast.cc  test-view-switcher-bar.cc  test-view-switcher.cc  test-window-title.cc  test-window.cc
tests/test1/: main.cc
tests/test2/: main.cc
tools/: generate_defs_and_docs.sh  generate_signals.sh
tools/extra_defs_gen/: generate_defs_libadwaita.cc  meson.build
tools/m4/: convert.m4  convert_libadwaita.m4
untracked/: README
